# openhear

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLINICIAN_GUIDE.md  CODE_OF_CONDUCT.md  COPILOT.md  EMBEDDED_PORT_GUIDE.md  HARDWARE.md  LICENSE  Makefile  NOTICE  README.md  REGEN_VISION.md  SECURITY.md  SIMULATIONS.md  SOVEREIGN_AUDIO.md  SUPERIOR_HEARING_ROADMAP.md  coverage.xml  haptic_commander.py  noahlink_check.py  pyproject.toml  requirements.txt  yamnet_classifier.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: aid_compatibility.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
advocacy/: __init__.py  adapters.py  bundle.py  gate.py
audiogram/: README.md  __init__.py  analyse.py  analyse_cli.py  audiogram.py  compare.py  export.py  import_pdf.py  loader.py  manual_entry.py  reader.py  visualiser.py
audiogram/data/: FORMAT.md  burgess_2021.json
clinical/: CONSENT_TEMPLATE.md  DATA_MANAGEMENT_SOP.md  PILOT_PROTOCOL_v1.md  README.md  SAP_v1.md
core/: __init__.py  backup.py  fitting_data.py  fitting_schema.py  future_memory.py  noahlink.py  protocol.py  read_fitting.py  safety.py  write_fitting.py
core/noahlink/: __init__.py  __main__.py
core/noahlink/vendors/: __init__.py  phonak.py
core/schema/: __init__.py  extraction_v1.py
docs/: ACCESSIBILITY_STANDARDS.md  ADVOCACY_INTEGRATION.md  AIDS_FREE_ARCHITECTURE.md  ARCHITECTURE.md  BENCHMARKS.md  BURGESS_PRINCIPLE.md  CONTRIBUTING.md  EVIDENCE_AND_VALIDATION.md  FUNDING_AND_PARTNERSHIPS.md  GO_TO_MARKET.md  HAPTIC_PATTERN_LIBRARY.md  HAPTIC_PRIOR_ART.md  HUMAN_SENSORY_SOVEREIGNTY_ARCHITECTURE.md  INTEGRATORS.md  NOAHLINK_EXTRACTION.md  PHASE5_SOVEREIGN_DEVICE.md  PRIOR_ART.md  PROTOCOL_NOTES.md  REGEN_BACKLOG.md  REGEN_LOGGING_SPEC.md  RESEARCH_ROADMAP.md  SOVEREIGN_AUDIO_v2.md  SOVEREIGN_PHILOSOPHY.md  TUNING_GUIDE.md  index.md  roadmap.md  user_complaints_solved.md
dsp/: CONTACT_PROFILES.md  FATIGUE_AWARE.md  __init__.py  audiogram_profile.py  beamforming.py  compression.py  config.py  config.schema.json  contact_cli.py  contact_profiles.py  explain.py  explain_cli.py  fatigue.py  fatigue_cli.py  feedback_canceller.py  filters.py  metrics.py  noise.py  noise_reduction.py  occlusion_reduction.py  output_limiter.py  own_voice_bypass.py  pipeline.py  profile_delta.py  user_config.py  voice_clarity.py
dsp/stages/: __init__.py  base.py  binaural_entrainer.py
examples/: config.yaml  demo.py  neuroplasticity_demo.py  reference_integration.py  sample_audiogram.json
hardware/: BOM.md  README.md  ROADMAP.md
hardware/assembly/: README.md
hardware/ite-shells/: README.md  materials.md  parametric_shell.scad  print_settings.md  resources.md  sweat-proofing.md  sweatproof.md  workflow.md
hardware/safety/: README.md  mpo_calculator.py
hardware/shell/: README.md  parametric_mould.md
hardware/sovereign_device/: __init__.py  components.json  pipeline.py
hardware/tympan/: README.md  audiogram_to_tympan.py
hardware/tympan/templates/: basic_openhear.ino
hardware/wristband/: BOM.csv  README.md  __init__.py  assembly_v1.md  firmware.py  power_budget_v1.md
hardware/wristband/cad/: generate_stl.sh  parametric_wristband_v1.scad
hardware/wristband/firmware/: __init__.py  haptic_mapper.py  openhear_firmware_v1.py
hardware/wristband/kicad/: gerber_notes.md  wristband_v1.kicad_pcb  wristband_v1.kicad_pro  wristband_v1.kicad_sch
hardware/wristband/v1.5-no-solder/: BOM.csv  README.md  assembly_v1.5_no_solder.md  definitive_build_guide_v1.5.md  firmware_notes.md
hardware/wristband/v1.5-no-solder/cad/: export_stls.sh  parametric_modular_wristband_v1.5.scad
hardware/wristband/v1.5-no-solder/kicad/: README.md  openhear_v1.5_no_solder.kicad_pcb  openhear_v1.5_no_solder.kicad_pro  openhear_v1.5_no_solder.kicad_sch
hardware/wristband/v2-xiao-nrf52840/: BOM_v2.csv  README.md  assembly_v2.md  parametric_wristband_v2.scad
hardware/wristband/v2-xiao-nrf52840/firmware/: README.md  STANDALONE.md  (+2 more)
learn/: __init__.py  engine.py  preferences.py  profiles.py  universal_friend.py
mobile/: README.md
mobile/app/: build.gradle.kts
mobile/app/src/main/cpp/: CMakeLists.txt  openhear_dsp.cpp
scripts/: __init__.py  benchmark.py
stream/: __init__.py  ble_haptic.py  bluetooth_output.py  crowd_arousal.py  haptic_mapper.py  haptic_packet.py  haptic_policy.py  haptic_primitive.py  latency.py  phase2_training.py  phase3_open_conversation.py  phase4_spatial_extended.py  recorder.py  sound_classifier.py  tempo_channel.py  virtual_cable.py  wristband_runtime.py
tests/: conftest.py  test_advocacy.py  test_audiogram_analyse.py  test_audiogram_compare_cli.py  test_audiogram_dataclass.py  test_audiogram_export.py  test_audiogram_import_pdf.py  test_audiogram_loader.py  test_audiogram_loader_legacy.py  test_audiogram_manual_entry.py  test_audiogram_reader.py  test_audiogram_to_tympan.py  test_audiogram_visualiser.py  test_binaural_entrainer.py  test_core_fitting_schema.py  test_core_future_memory.py  test_core_phase4.py  test_core_protocol_extra.py  test_core_read_fitting.py  test_core_write_fitting_extra.py  test_dsp_audiogram_profile.py  test_dsp_beamforming.py  test_dsp_compression.py  test_dsp_contact_profiles.py  test_dsp_explain.py  test_dsp_fatigue.py  test_dsp_feedback_canceller.py  test_dsp_filters.py  test_dsp_metrics.py  test_dsp_noise_reduction.py  test_dsp_noise_vad.py  test_dsp_occlusion_reduction.py  test_dsp_output_limiter.py  test_dsp_own_voice_bypass.py  test_dsp_phase2.py  test_dsp_pipeline.py  test_dsp_pipeline_run.py  test_dsp_profile_delta.py  test_dsp_user_config.py  test_dsp_voice_clarity.py  (+43 more)
tests/golden/: README.md  compression.npy  feedback.npy  noise_reduction.npy  voice_clarity.npy
therapy/: README.md  __init__.py  adapt.py  binaural.py  binaural_cli.py  entrainment.py  protocol.py
voice/: README.md  __init__.py  analyser.py  compare.py  config.py  feedback.py  reference.py
wristband/: README.md  __init__.py  openhear_firmware.py
wristband/encoding/: __init__.py  v0.py  v0_spec.md
(+9 files in other folders)
