[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhear"
version = "0.1.0"
description = "Open, user-controlled hearing-aid signal processing, fitting and learning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "OpenHear contributors" }]
keywords = ["hearing-aid", "audio", "dsp", "accessibility", "noahlink"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Numerical / DSP
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # USB HID (Noahlink Wireless 2)
    "hid>=1.0.6",
    # YAML user-config parsing
    "PyYAML>=6.0",
]

[project.optional-dependencies]
audio = [
    # Real-time audio I/O — split out because PyAudio needs portaudio
    # which is awkward on some CI runners.
    "PyAudio>=0.2.14",
    "sounddevice>=0.5.2",
    "soundfile>=0.12.1",
]
plot = ["matplotlib>=3.8.0"]
ble = ["bleak>=1.1.1"]
dev = [
    "pytest>=7.0",
]

[project.scripts]
openhear-pipeline = "dsp.pipeline:run_pipeline"
openhear-read-fitting = "core.read_fitting:main"
openhear-noahlink = "core.noahlink:main"
openhear-bluetooth = "stream.bluetooth_output:main"
openhear-virtual-cable = "stream.virtual_cable:main"
openhear-latency = "stream.latency:main"
openhear-recorder = "stream.recorder:main"
openhear-demo = "examples.demo:main"

[project.urls]
Homepage = "https://github.com/ljbudgie/openhear"
Issues = "https://github.com/ljbudgie/openhear/issues"

[tool.setuptools]
# Ship the existing top-level package directories as installable packages.
packages = [
    "advocacy",
    "audiogram",
    "core",
    "dsp",
    "examples",
    "hardware",
    "hardware.tympan",
    "learn",
    "stream",
    "voice",
    "wristband",
]
include-package-data = true

[tool.setuptools.package-data]
"audiogram" = ["data/*.json"]
"dsp" = ["config.schema.json"]
"stream" = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = [
    "advocacy",
    "audiogram",
    "core",
    "dsp",
    "hardware",
    "learn",
    "stream",
    "voice",
    "wristband",
]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Start with a conservative rule set so the lint job can be enforcing from
# day one without forcing a large auto-fix pass across the existing code.
# Additional rule families (UP, B, SIM, PL, ...) can be enabled as the
# codebase is brought in line with them.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
]
ignore = [
    "E501", # line length is enforced by the formatter, not the linter
    # The following are tracked legacy issues that can be cleaned up
    # incrementally without blocking the introduction of the lint job:
    "E702", # multiple statements on one line (semicolon) — a few isolated cases
    "E741", # ambiguous variable name (e.g. single-letter `l`)
    "F841", # local variable assigned but never used — keep until reviewed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
# Strictness is intentionally kept low for now; tighten module-by-module.
check_untyped_defs = false
disallow_untyped_defs = false
